# Educational-chatbot-MLOps

./: .gitignore  LICENSE  README.md
.github/workflows/: backup.yml  deploy.yaml  firebase-deploy.yaml  preprocessing.yaml
backend/: .pre-commit-config.yaml  Dockerfile  initialization.py  main.py  pyproject.toml
backend/auth/config/: security.py
backend/auth/dependencies/: security.py
backend/auth/models/: rbac.py
backend/auth/routers/: auth.py  protected.py
backend/auth/schemas/: auth.py  token.py
backend/auth/services/: auth.py  rbac.py  security.py
backend/auth/test/: db_test.py
backend/chat_logs/: 2_17_28829abe-5d28-49fa-9362-75adfe97f2fd_chat_20250406_153430.csv  2_17_28829abe-5d28-49fa-9362-75adfe97f2fd_chat_20250406_161237.csv
backend/chatbot_service/prompts/: Irrelevant.yaml  chat.yaml  general_chat.yaml  intent.yaml  qa_prompt.yaml  query_rewriter.yaml  stage_1.yaml  stage_2.yaml  stage_2_no_json.yaml
backend/chatbot_service/routers/: chatbot.py
backend/chatbot_service/schemas/: input_data.py  output_data.py
backend/chatbot_service/services/: bot.py  bot_utils.py  chat_service.py  chat_session.py  custom_retreiver.py  general_chat.py  global_cache.py  intent_classifier.py  logger_config.py  model_pricing.py  type_chat.py  type_irrelevance.py  utils.py
backend/core/database/: config.py
backend/core/models/: user.py
backend/evals/Semantic_Retreival_Auto_Eval/: Readme.md  pyproject.toml  semantic_retreival_evals.py  vectordb_data.csv
backend/evals/Semantic_Retreival_Auto_Eval/runs/unknown_course_video_001_20250328-134450/: qa_dataset.json  retriever_evaluation_results.csv
backend/evals/Semantic_Retreival_Auto_Eval/src/services/: evaluator.py  results_manager.py  utils.py
backend/evals/Semantic_Retreival_Auto_Eval/src/skeleton/: skeleton.py
backend/evals/intent_evals/: Readme.md  intent_classifier.py  intent_eval.py  ml-intent-classification-dataset.xlsx
backend/evals/intent_evals/intent_runs/20250407-100141/: errors.csv  run.json
backend/evals/intent_evals/intent_runs/20250407-100748/: run.json
backend/evals/intent_evals/intent_runs/20250407-100847/: errors.csv  original_data.csv  run.json
backend/video_service/config/: settings.py
backend/video_service/models/: course.py  video.py
backend/video_service/routers/: courses.py  video.py
backend/video_service/schemas/: course.py  video.py
backend/video_service/services/: gcs_service.py
frontend/: .env.development  .env.production  .firebaserc  .gitignore  README.md  firebase.json  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json
frontend/.firebase/: hosting.b3V0.cache
frontend/.github/workflows/: firebase-deploy.yml  test.yml
frontend/src/app/: globals.css  layout.js  page.js  page.module.css
frontend/src/app/_context/: AuthContext.js
frontend/src/components/: AuthSidebar.jsx  ClientWrapper.js  Hero.css  Hero.jsx  LoginSidebar.jsx  Navbar.css
frontend/src/styles/: LoginSidebar.css  page.css
preprocessing/: .dockerignore  .env.template.yaml  .gcloudignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
preprocessing/prompts/: video_description.yaml
preprocessing/src/: API_Calling.py  description_processor.py  file.py  llms_initialize.py  logger_config.py  processing_chunks.py  vector_db.py  video_to_audio.py
preprocessing/tests/: unit_test.py
(+75 files in other folders)
